# AppIconGen

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: app-builder.yml
src/: macros.rs  main.rs
src/icon_gen/: definition.rs  helpers.rs  icns.rs  ico.rs  mod.rs  tray.rs
